--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "homepage": "https://github.com/C-Lodder/validatejs-es6",
   "author": "Charlie Lodder",
   "license": "MIT",
-  "main": "src/htmlminifier.js",
+  "main": "src/validate.js",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/C-Lodder/validatejs-es6.git"
